# Hotline

hlserver/: CMakeLists.txt
hlserver/include/: globals.hpp  script_api.hpp  server.hpp  transactions.hpp  users.hpp
hlserver/src/: globals.cpp  main.cpp  server.cpp  transactions.cpp  users.cpp
